# self_service_game

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pipeline.yaml
src/self_service_game/: __init__.py  main.py
tests/: test_sla.py
