[tool.poetry]
name = "self_service_game"
version = "0.1.6"
description = ""
license = "MIT"
authors = ["pali <prclash13@protonmail.com>"]
readme = "README.md"
packages = [{include = "self_service_game", from = "src"}]

[tool.poetry.urls]
"Homepage" = "https://github.com/sudo-pali/self_service_game"
"Repository" = "https://github.com/sudo-pali/self_service_game"
"Bug Tracker" = "https://github.com/sudo-pali/self_service_game/issues"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^6.0.0"
blue = "^0.9.1"
taskipy = "^1.14.1"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.poetry.scripts]
self-service  = "self_service_game.main:main"
